tests/baselines/reference/moduleProperty2.errors.txt
moduleProperty2.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleProperty2.ts(7,15): error TS2304: Cannot find name 'x'.
moduleProperty2.ts(11,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleProperty2.ts(12,17): error TS2339: Property 'y' does not exist on type 'typeof M'.


==== moduleProperty2.ts (4 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function f() {
            var x;
        }
        var y;
        export var z;
        var test1=x;
                  ~
!!! error TS2304: Cannot find name 'x'.
        var test2=y; // y visible because same module
    }
    
    module N {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var test3=M.y; // nope y private property of M
                    ~
!!! error TS2339: Property 'y' does not exist on type 'typeof M'.
        var test4=M.z; // ok public property of M
    }